# ld42_game

./: CMakeLists.txt  background.cpp  background.h  game.cpp  game.h  input.cpp  input.h  main.cpp  menu.cpp  menu.h
data/: asteroid1.png~  fog.png~  welcome.png~
images/: chuvak.kra  welcome.kra
